# ibimina

./: .client-framework  .dockerignore  .editorconfig  .env  .env.cloudflare.template  .env.example  .env.production  .env.production.example  .eslintignore  .git-push-summary.md  .gitignore  .gitleaks.toml  .replit  ACTION_PLAN.md  AI_AGENT_IMPLEMENTATION.md  AI_COMPLETE_IMPLEMENTATION_GUIDE.md  AI_DEPLOYMENT_GUIDE.md  AI_DEPLOYMENT_SUMMARY.md  AI_FEATURES_COMPLETE.md  AI_FEATURES_COMPLETE_STATUS.md  AI_FEATURES_QUICKSTART.md  AI_FEATURES_QUICKSTART_DEPLOY.md  AI_FEATURES_QUICK_REFERENCE.md  AI_FILES_INVENTORY.md  AI_IMPLEMENTATION_COMPLETE.md  AI_IMPLEMENTATION_SUMMARY.md  AI_INTEGRATION_SETUP.md  AI_PHASE_1_COMPLETE.md  AI_PHASE_2_COMPLETE.md  AI_PHASE_3_COMPLETE.md  AI_PHASE_3_IMPLEMENTATION_PLAN.md  AI_PHASE_4_COMPLETE.md  AI_PHASE_4_COMPLETE_SUMMARY.md  AI_PHASE_4_FINAL_COMPLETE.md  AI_PHASE_4_IMPLEMENTATION.md  AI_PHASE_4_IMPLEMENTATION_COMPLETE.md  AI_PHASE_4_QUICKSTART.md  AI_PHASE_4_QUICK_REF.md  AI_PHASE_4_READY.md  AI_PHASE_4_RUST_COMPLETE.md  (+255 more)
.ci/: INTEGRATION_REPORT.md  ahead_behind.txt  branches.txt  candidate_branches.txt  merge_status.txt  remote_commit_dates.txt
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.husky/: commit-msg  pre-commit
apps/desktop/staff-admin/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/staff-admin/src-tauri/icons/: .gitkeep
apps/desktop/staff-admin/src-tauri/src/: main.rs  tray.rs
apps/desktop/staff-admin/src-tauri/src/commands/: ai.rs  auth.rs  hardware.rs  mod.rs  print.rs  updates.rs
(+2375 files in other folders)
