[package]
name = "ibimina-staff-admin-desktop"
version = "0.1.0"
description = "SACCO+ Staff Admin Desktop Application"
authors = ["Ibimina Team"]
license = "MIT"
repository = "https://github.com/ikanisa/ibimina"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-http = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-os = "2.0"
tauri-plugin-process = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-updater = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
tokio = { version = "1.35", features = ["full"] }
keyring = "2.3"
base64 = "0.21"
reqwest = { version = "0.11", features = ["json", "blocking", "stream"] }
futures = "0.3"
chrono = "0.4"

# Platform-specific dependencies
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_Security_Credentials",
    "Win32_System_Com",
    "Win32_Graphics_Printing",
] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.27", features = ["user"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
